--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "13.12.0,"
+    "node": "13.12.0"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
